6-Monitoring/prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
spec:
  rules:
  - host: prometheus.internal.onyx.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: webui
